fixing nav bar button left padding and top padding on mobile

--- a/src/layout/Layout/Layout.css
+++ b/src/layout/Layout/Layout.css
@@ -11,6 +11,7 @@
   font-family: "roboto_regular";
   font-size: 16px !important;
   margin-bottom: 6px;
+  margin-left: 8px !important;
 }
 
 .navbar-brand {
@@ -85,7 +86,7 @@
 
 @media (max-width: 767px) {
   .nav-link-button {
-    margin-top: 10px;
+    margin-top: 14px;
   }
 }
 
